--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <%= render partial: 'shared/navbar' %>
+    <% if notice %> <%= notice %> <% end %>
+    <% if alert %> <%= alert %> <% end %>
     <%= yield %>
   </body>
 </html>
