--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -12,13 +12,11 @@
 
   <div>
     <%= form.label :time %><br>
-    <%= form.date_field :time %>
+    <%= form.datetime_field :time %>
   </div>
     
   
   <div>
     <%= form.submit %>
   </div>
-
-  <%= "cuaaaaa #{current_user.id}" %>
 <% end %>
