--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <ul>
   <% if user_signed_in? %>
-    <li> <%= link_to 'Home', user_path(current_user), method: :delete %> </li>
+    <li> <%= link_to 'Home', user_path(current_user) %> </li>
+    <li> <%= link_to 'All Events', root_path %> </li>
     <li> <%= link_to 'Log Out', destroy_user_session_path, method: :delete %> </li>
   <% else %>
     <li> <%= link_to 'Sign Up', new_user_registration_path %> </li>
